--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        
 
-    </head>
-    <body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" contente="width=device-width, initial-scale=1.0">
+    <title>alurabook</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
 
-    </body>
-    </head>
+<body>
+
+</body>
+
 </html>
