--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" contente="width=device-width, initial-scale=1.0">
-    <title>alurabook</title>
+    <title>AluraBook</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-
+    <h1>AluraBook</h1>
 </body>
 
 </html>
