--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" contente="width=device-width, initial-scale=1.0">
     <title>AluraBook</title>
+    <link rel="stylesheet" href="reset.css"
     <link rel="stylesheet" href="styles.css">
 </head>
 
