--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 </head>
 
 <body>
-    <h1>AluraBook</h1>
+    <header class="cabeçalho">
+        <span class="cabeçalho__menu-hamburguer"
+
+    </header>
 </body>
 
 </html>
