--- a/index.html
+++ b/index.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" contente="width=device-width, initial-scale=1.0">
-    <title>AluraBook</title>
-    <link rel="stylesheet" href="reset.css"
-    <link rel="stylesheet" href="styles.css">
-</head>
+    <head>
+          <meta charset="UTF-8">
+          <meta name="viewport" content="with=decive=with, initial-scale=1.0"
+          <title>AluraBooks</title>
+          <link rel="stylesheet" href="reset.css">
+          <link rel="stylesheet" href="styles.css">
 
-<body>
-    <header class="cabeçalho">
-        <span class="cabeçalho__menu-hamburguer"
 
-    </header>
-</body>
-
-</html>
+    <body>
+          <header class="cabeçalho"></header>
+        
+    </body>    
+    </head>
